update project alt

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
 			 <div class="bgrid folio-item">
 			   <div class="item-wrap">
-				   <img src="images/pokemon.webp" alt="Liberty">
+				   <img src="images/pokemon.webp" alt="Pokemon Mind Reader">
 				  <a href="#modal-01" class="overlay">	                  	           
 					 <div class="folio-item-table">
 						 <div class="folio-item-cell">
@@ -525,7 +525,7 @@
 
 				<div class="bgrid folio-item">
 			   <div class="item-wrap">
-				   <img src="images/daves.webp" alt="Shutterbug">
+				   <img src="images/daves.webp" alt="Dave's Automotive Shop">
 				   <a href="#modal-02" class="overlay">              		                  
 					 <div class="folio-item-table">
 						 <div class="folio-item-cell">
@@ -541,7 +541,7 @@
 
 			<div class="bgrid folio-item">
 			   <div class="item-wrap">
-				   <img src="images/FortStats.png"alt="Clouds">
+				   <img src="images/FortStats.png"alt="FortStats">
 				  <a href="#modal-03" class="overlay">             		                  
 					 <div class="folio-item-table">
 						 <div class="folio-item-cell">
