applied media query for CSULB button for phone screen to CSU, Long Beach

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
    		<div class="col-six tab-full">
 
-   			<h3>Currently Learning:</h3>
+   			<h2>Currently Learning:</h2>
    			<p></p>
 
 				<ul class="skill-bars">
@@ -363,7 +363,7 @@
 										<a href="#modal-school" class="overlay">              		                  
 											<div class="folio-item-table">
 											<div class="folio-item-cell">
-												<h3 class="folio-title">California State University, Long Beach</h3>	     					    	     		
+												<h3 class="folio-title">CSU, Long Beach</h3>	     					    	     		
 											</div> 	                      	
 											</div>                    
 										</a>
