--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
 				   <p >I am aspiring software engineer studying <span style="color:#FF0077">Computer Science</span>  at <br>
 						<span style="color:#FF0077">California State University, Long Beach</span> graduating in Spring, 2019.
-						I see myself more of a problem solver.
-						Programming is just one of the tools I use when <br><span style="color:#FF0077">solving real world issues</span> that I care about.<br>
-						On my free time, I like to read articles and listen to Podcasts on life, tech, and finance. 
+						I see myself as problem solver, and
+						programming is just one of the tools I use to <br><span style="color:#FF0077">solve real world issues</span> that I care about.<br>
+						In my free time, I like to read articles and listen to Podcasts on life, tech, and finance. 
 						My faovite podcast is <a style="color:#FF0077" href="https://www.wsj.com/podcasts/tech-news-briefing">Tech News Briefing</a> from WSJ.</p>
    			</div>   			
 
@@ -665,7 +665,7 @@
 	   <div class="col-twelve">
 
 		   <h2><span style="color:#FF0077">Projects</span></h2>
-		   <h1>Check Out Some of My Works.</h1>
+		   <h1>Check Out Some of My Work.</h1>
 
 		   <p class="lead">Contact me to learn more about my work or work together!<br> More projects to be added.</p>
 
