--- a/index.html
+++ b/index.html
@@ -727,6 +727,22 @@
 			   </div>
 				</div> <!-- /folio-item -->
 
+				<div class="bgrid folio-item">
+					<div class="item-wrap">
+						<img src="images/alexa.png"alt="FortStats">
+					   <a href="#modal-04" class="overlay">             		                  
+						  <div class="folio-item-table">
+							  <div class="folio-item-cell">
+								  <h3 class="folio-title">Facts on Wei</h3>	     					    
+										  <span class="folio-types">
+											   Alexa Skill - NodeJs
+										</span>		     		
+									 </div> 	                      	
+						  </div>                    
+					   </a>
+					</div>
+					 </div> <!-- /folio-item -->
+
 			<!--
 			<div class="bgrid folio-item">
 			   <div class="item-wrap">
@@ -849,6 +865,28 @@
 				 </div>		      
 
 			   </div> <!-- /modal-03 -->
+
+			   <div id="modal-04" class="popup-modal slider mfp-hide">	
+				<!--
+				 <div class="media">
+					 <img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+				 </div>      	
+				-->
+			   <div class="description-box">
+				  <h4>Facts on Wei</h4>		      
+				  <p>Facts on Wei is a Alexa Skill made with <code>NodeJs</code>. 
+					Essentially, anyone can ask Alexa on facts about who I am.
+					The purpose of this project is for me to get expose to the AWS and Amazon Developer enviornment.</p>
+
+				  <div class="categories">Amazon Skill</div>			               
+			   </div>
+
+			 <div class="link-box">
+				<a href="">&nbsp;</a>
+				  <a href="#" class="popup-modal-dismiss">Close</a>
+			 </div>		      
+
+		   </div> <!-- /modal-03 -->
 
 				<!--
 			   <div id="modal-04" class="popup-modal slider mfp-hide">	
